# my-game-of-life

./: CMakeLists.txt  Grid.h  README.md  main.cpp
.github/workflows/: cmake-single-platform.yml
src/: Grid.cpp  Grid.h  main.cpp
